--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ input[type=number] {
 }
 
 #first_section {
-    background-image: url("image/donate_image1.jpg");
+    background-image: url("./image/donate_image1.jpg");
     color: white;
     text-align: center;
     padding: 40px 30px;
